# Skulk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MISSED_THINGS.md  NOTICE  README.md  TODO.md  exo.yaml.example  flake.nix  justfile  mkdocs.yml  pyproject.toml  skulk.yaml.example
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-app.yml  docs.yml  pipeline.yml
.mlx_typings/mlx_lm/: generate.pyi
bench/: REPRO_GEMMA4_HANG.md  eval_tool_calls.py  exo_bench.py  exo_eval.py  harness.py  parallel_requests.py  pyproject.toml  repro_gemma4_hang.py  skulk_bench.py  skulk_eval.py
bench/tests/: test_repro_gemma4_hang.py
dashboard-react/: package-lock.json  package.json  typedoc.json  vite.config.ts
dashboard-react/.storybook/: preview.tsx
dashboard-react/scripts/: export-tolgee-import.mjs
dashboard-react/src/: App.tsx  docs-entry.ts  main.tsx
dashboard-react/src/api/: client.ts  types.ts
dashboard-react/src/hooks/: useClusterState.ts  useConfig.ts  useRemoteAccess.ts  useTailscaleStatus.ts
dashboard-react/src/i18n/: README.md  tolgee.ts
dashboard-react/src/pages/: DownloadsPage.tsx  MainPage.tsx  SettingsPage.tsx  TracesPage.tsx
dashboard-react/src/store/: api.ts  hooks.ts  index.ts
dashboard-react/src/stores/: chatStore.ts  index.ts  modelsStore.ts  topologyStore.ts  uiStore.ts
dashboard-react/src/theme/: GlobalStyle.ts  (+2 more)
deployment/install/: install-launchd.sh  install-systemd.sh  skulk-startup.sh  skulk.env.example  vector-startup.sh
deployment/launchd/: foundation.foxlight.skulk-vector.plist  foundation.foxlight.skulk.plist
deployment/logging/: docker-compose.yml  vector-external.yaml  vector.yaml
deployment/rocm/: README.md  launch-skulk.sh.example
deployment/systemd/: skulk.service
design/: configuration-taxonomy.md  telemetry-normalization.md
docs/: api.md  architecture.md  foxcluster-model-store.md  gemma4-assistant-plan.md  gemma4-mtp-initiative.md  index.md  kv-cache-backends.md  model-store.md  react-dashboard-cutover-plan.md  slice-placement-and-vindex-publisher-plan.md  traces-system-design.md
docs/adr/: 0001-larql-runner-type.md  0002-head-mlx-cold-larql.md  0003-vindex-provenance.md  README.md
docs/design/: engine-pipeline-abstraction-plan.md
docs/model-runtime-notes/: README.md  deepseek_v32.md  gemma4.md  gpt_oss.md  llama31_nemotron_nano.md  nemotron.md  qwen35.md
nix/: metal-toolchain.nix
packaging/dmg/: create-dmg.sh
packaging/pyinstaller/: exo.spec  skulk.spec
python/: parts.nix
reports/: skulk-performance-report-2026-06-22.md
resources/embedding_model_cards/: BAAI--bge-small-en-v1.5.toml  sentence-transformers--all-MiniLM-L6-v2.toml
resources/inference_model_cards/: Qwen--Qwen2.5-7B-Instruct-GGUF.toml  bartowski--Llama-3.3-70B-Instruct-GGUF.toml  bartowski--Qwen2-VL-2B-Instruct-GGUF.toml  bartowski--openai_gpt-oss-120b-GGUF.toml  bartowski--openai_gpt-oss-20b-GGUF.toml  deepreinforce-ai--Ornith-1.0-35B-GGUF.toml  froggeric--Qwen3.6-27B-MTP-GGUF.toml  google--gemma-4-31B-it-qat-q4_0-gguf.toml  jamesdumay--GLM-4.7-Flash-MTP-GGUF.toml  leonsarmiento--Ornith-1.0-35B-4bit-mlx.toml  mlx-community--DeepSeek-V3.1-4bit.toml  mlx-community--DeepSeek-V3.1-8bit.toml  mlx-community--DeepSeek-V3.2-4bit.toml  mlx-community--DeepSeek-V3.2-8bit.toml  mlx-community--Devstral-Small-2-24B-Instruct-2512-4bit.toml  mlx-community--GLM-4.5-Air-8bit.toml  mlx-community--GLM-4.5-Air-bf16.toml  mlx-community--GLM-4.7-4bit.toml  mlx-community--GLM-4.7-6bit.toml  mlx-community--GLM-4.7-8bit-gs32.toml  mlx-community--GLM-4.7-Flash-5bit.toml  mlx-community--GLM-4.7-Flash-6bit.toml  mlx-community--GLM-4.7-Flash-8bit.toml  mlx-community--GLM-5-8bit.toml  mlx-community--GLM-5-MXFP4-Q8.toml  mlx-community--GLM-5-bf16.toml  mlx-community--Kimi-K2-Instruct-4bit.toml  mlx-community--Kimi-K2-Thinking.toml  mlx-community--Kimi-K2.5.toml  mlx-community--Llama-3.1-Nemotron-70B-Instruct-HF-4bit.toml  mlx-community--Llama-3.1-Nemotron-70B-Instruct-HF-8bit.toml  mlx-community--Llama-3.1-Nemotron-70B-Instruct-HF-bf16.toml  mlx-community--Llama-3.1-Nemotron-Nano-4B-v1.1-4bit.toml  mlx-community--Llama-3.1-Nemotron-Nano-4B-v1.1-8bit.toml  mlx-community--Llama-3.1-Nemotron-Nano-4B-v1.1-bf16.toml  mlx-community--Llama-3.2-1B-Instruct-4bit.toml  mlx-community--Llama-3.2-3B-Instruct-4bit.toml  mlx-community--Llama-3.2-3B-Instruct-8bit.toml  mlx-community--Llama-3.3-70B-Instruct-4bit.toml  mlx-community--Llama-3.3-70B-Instruct-8bit.toml  (+76 more)
roadmap/: tts-integration-plan.md
rust/: parts.nix
rust/networking/: Cargo.toml
rust/skulk_pyo3_bindings/: Cargo.toml  pyproject.toml  skulk_pyo3_bindings.pyi
scripts/: build_docs.py  export_openapi.py  rename_to_skulk.sh
src/exo/: main.py  startup_recovery.py
src/skulk/: __init__.py  __main__.py  main.py  startup_recovery.py
tests/: auto_bench.sh  eval_tool_calls.sh  headless_runner.py  preflight_mem.sh  run_exo_on.sh  run_skulk_on.sh  test_gemma_vision.py  test_vision_cache.py
tmp/: gen_card.py  test_trust_remote_code_attack.sh
website/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
website/docs/: amd-strix-halo-nodes.md  api-guide.md  architecture-reference.md  architecture.md  build-and-runtime.md  cluster-communication.md  everything-different.md  external-logging.md  intro.md  kv-cache-backends.md  model-capabilities.md  model-cards.md  model-store.md  operations.md  run-skulk-as-a-service.md  runtime-plane-separation.md  speculative-decoding.md  tailscale-clustering.md  tailscale.md  thunderbolt-clustering.md  tracing.md
(+630 files in other folders)
