[project]
name = "skulk"
version = "1.3.1"
description = "Skulk: distributed AI inference across heterogeneous clusters (Apple Silicon MLX and AMD/Linux GPU)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiofiles>=24.1.0",
  "aiohttp>=3.12.14",
  "types-aiofiles>=24.1.0.20250708",
  "pydantic>=2.11.7",
  "fastapi>=0.116.1",
  "filelock>=3.18.0",
  "rustworkx>=0.17.1",
  "huggingface-hub>=1.8.0",
  "psutil>=7.0.0",
  "loguru>=0.7.3",
  "skulk_pyo3_bindings",                            # rust bindings
  "anyio==4.11.0",
  "mlx==0.31.2; sys_platform == 'darwin'",
  "mlx[cpu]==0.30.6; sys_platform == 'linux'",
  "mlx-lm",
  "mlx-optiq[convert]; sys_platform == 'darwin'",
  "tiktoken>=0.12.0",                             # required for kimi k2 tokenizer
  "hypercorn>=0.18.0",
  "openai-harmony>=0.0.8",
  "httpx>=0.28.1",
  "ddgs>=9.6.1",
  "tomlkit>=0.14.0",
  "mflux>=0.16.9",
  "python-multipart>=0.0.21",
  "msgspec>=0.19.0",
  "zstandard>=0.23.0",
  "pyyaml>=6.0.2",
  "types-PyYAML>=6.0.12",
  # 0.6.1 ships the speculative-drafter catalog (gemma4_assistant et al.,
  # Gemma 4 MTP Phase B); vision-wrapper touchpoints re-audited against it.
  "mlx-vlm==0.6.1; sys_platform == 'darwin'",
  "transformers>=5.5.0,<6.0.0",
]

[project.scripts]
skulk = "skulk.main:main"
skulk-build-macos-local-network-probe-app = "skulk.connectivity.local_network_probe_app:main"
skulk-macos-local-network-probe = "skulk.connectivity.local_network_probe:main"

# dependencies only required for development
[dependency-groups]
dev = [
  "basedpyright>=1.29.0",
  # starlette >= 1.0 deprecates httpx-backed TestClient; httpx2 is its
  # supported test transport. Production HTTP-client code stays on httpx.
  "httpx2>=2.0",
  "pyinstaller>=6.17.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-env",
  "ruff>=0.11.13",
]

# mlx[cuda] requires a newer version of mlx. the ideal on linux is: default to mlx[cpu] unless[cuda] specified.
[project.optional-dependencies]
# cuda = [
#     "mlx[cuda]==0.26.3",
# ]
# llama.cpp engine for heterogeneous (non-MLX) GPU nodes, e.g. AMD Strix Halo via
# Vulkan/ROCm. NOTE: a plain `pip install` of this extra builds the CPU backend;
# for a GPU node, install from source with the backend selected at build time,
# e.g. `CMAKE_ARGS="-DGGML_VULKAN=on" pip install llama-cpp-python`, and declare
# the built backends via SKULK_LLAMA_CPP_BACKENDS so the node advertises them.
llama-cpp = [
    "llama-cpp-python>=0.3.3",
]

###
# workspace configuration
###

[tool.uv.workspace]
members = ["rust/skulk_pyo3_bindings", "bench"]

[tool.uv.sources]
skulk_pyo3_bindings = { workspace = true }
# Using official mlx — the RDMA fork (rltakashige/mlx-jaccl-fix-small-recv) doesn't
# build on macOS 26 Metal SDK. The fork's only change is a DSB memory barrier for
# Thunderbolt RDMA GPU coherence, which we don't need (Skulk uses libp2p, not RDMA).
# mlx = { git = "https://github.com/rltakashige/mlx-jaccl-fix-small-recv.git", branch = "address-rdma-gpu-locks", marker = "sys_platform == 'darwin'" }
# Foxlight-owned mlx-lm, reconciled onto upstream v0.31.3 (version 0.31.3.post1).
# Pinned to the merge of Foxlight-Foundation/mlx-lm PR #1 (branch
# foxlight/v0.31.3-base). Carries two Foxlight fixes not in upstream:
# ArraysCache leak (mx.depends on BatchKVCache.extend) and the DeepSeek-V3.2
# lightning-indexer batch>1 fix. The other historic carries (float32 logprobs,
# GDN precision via upstream #997, left_padding eval via upstream #960) are
# absorbed in upstream v0.31.3. See foxlight-docs initiatives/gemma4-mtp/
# reconcile-notes.md for the sign-off evidence.
mlx-lm = { git = "https://github.com/Foxlight-Foundation/mlx-lm", rev = "e2f7ddcd31ec7d5214447a8d3206af0d2bff6e35" }
# Uncomment to use local mlx/mlx-lm development versions:
# mlx = { path = "/Users/Shared/mlx", editable=true }
# mlx-lm = { path = "/Users/Shared/mlx-lm", editable=true }

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

###
# type-checker configuration
###

[tool.basedpyright]
include = [".venv/lib/mlx", ".venv/lib/mlx_lm", "src", "bench"]
typeCheckingMode = "strict"
failOnWarnings = true

reportAny = "error"
reportUnknownVariableType = "error"
reportUnknownParameterType = "error"
reportMissingParameterType = "error"
reportMissingTypeStubs = "error"
reportInvalidCast = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryTypeIgnoreComment = "error"

pythonVersion = "3.13"
pythonPlatform = "Darwin"

exclude = [
  "**/.venv",
  "**/venv",
  "**/__pycache__",
  "**/exo_scripts",
  "**/.direnv",
  "**/rust",
  "**/.github",
]
stubPath = ".mlx_typings"

[[tool.basedpyright.executionEnvironments]]
root = "src"

###
# uv configuration
###

# supported platforms for this project
[tool.uv]
required-version = ">=0.8.6"
prerelease = "allow"
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]
extra-build-dependencies = { "miniaudio" = ["setuptools", "cffi", "pycparser"] }

###
# ruff configuration
###

[tool.ruff]
extend-exclude = [
  "shared/protobufs/**",
  "*mlx_typings/**",
  "rust/skulk_pyo3_bindings/**",
  "bench/vendor/**",
]

[tool.ruff.lint]
extend-select = ["I", "N", "B", "A", "PIE", "SIM"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (deselected by default)"]
env = ["SKULK_TESTS=1", "SKULK_TESTS=1"]
addopts = "-m 'not slow' --ignore=tests/start_distributed_test.py"
filterwarnings = ["ignore:builtin type Swig:DeprecationWarning"]
